Migrate Debian package from `logitechmediaserver` to `lyrionmusicserver`.
Please note that this still doesn't clean up the mess that we left behind when moving away from `squeezeboxserver`...

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-logitechmediaserver (_VERSION_) testing; urgency=low
+lyrionmusicserver (_VERSION_) testing; urgency=low
 
-  * Logitech Media Package
+  * Lyrion Music Server Package
 
  -- <admin@lms-community.org>  Mon, 03 Aug 2009 15:14:33 -0000
